fix: auto numbering katex equation overflow

--- a/src/style/notion-x.scss
+++ b/src/style/notion-x.scss
@@ -164,6 +164,11 @@ ul > ul {
   }
 }
 
+// fix overflow auto numbering from \begin{equation}
+.katex .vlist-t2 {
+  margin-right: 0 !important;
+}
+
 ol,
 ul {
   & > *:not(li):not(ol):not(ul),
